gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-prelude_import.rs
#[prelude_import] // { dg-error ".E0658." "" { target *-*-* } }
use std::prelude::v1::*;

fn main() {}

